workshop/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-axxes-svc
spec:
  selector:
    app: hello-axxes
  ports:
  - port: 80
    targetPort: 80
